sumo/tests/duarouter/trips/errors/vehicle_empty_departspeed/errors.duarouter
Error: Attribute 'departspeed' in definition of a vehicle is empty.
Error: Invalid departspeed definition for vehicle ''
Quitting (on error).
